Fix issue preventing the clicking of the delete permission group button in IE
This took me entirely too long to figure out, but it appears that IE treats inline elements differently than Chrome, Firefox, and Edge (surprise, surprise)

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/action-icon.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/action-icon.scss
@@ -26,11 +26,11 @@
 }
 
 .action-icon-container-inline {
-    display: inline;
+    display: inline-block;
 }
 
 .action-icon-button-container {
-    display: inline;
+    display: inline-block;
     padding: .42em;
     border-radius: 50%;
     margin-left: .5em;
